--- a/examples/package.json
+++ b/examples/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./*.test.js --exit"
   },
   "author": "",
   "license": "GPL-3.0",
   "devDependencies": {
-    "wendigo": "^2.1.1"
+      "wendigo": "^2.1.1",
+    "mocha": "^6.1.4"
   }
 }
