--- a/examples/package.json
+++ b/examples/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./*.test.js --exit"
+    "test": "mocha ./workshop/*.test.js --exit"
   },
   "author": "",
   "license": "GPL-3.0",
