--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "yamp --remark index.md -o index.html -k"
+    "compile": "yamp --remark index.md -o index.html"
   },
   "repository": {
     "type": "git",
