--- a/examples/package.json
+++ b/examples/package.json
@@ -13,5 +13,8 @@
     "express": "^4.17.1",
     "mocha": "^6.1.4",
     "wendigo": "^2.1.1"
+  },
+  "dependencies": {
+    "press-any-key": "^0.1.1"
   }
 }
